Updated HTML and Javascript

--- a/index.html
+++ b/index.html
@@ -10,7 +10,15 @@
     <main>
         <H1>Penny Flip Game</H1>
         <div>
-            <div>Penny Image Display, Button Controls, and Status Message</div>
+            <div>
+               <img id ="penny-heads" src ="./assets/images/penny-heads.jpg">
+            </div>
+               <div>
+                <button id="flip-button">Flip</button>
+                <button id="clear">Clear</button>
+               </div>
+                
+                
             <hr>
             <div>
                 <h2>Scoreboard</h2>
